# swaynyaad

./: COPYING.MIT  Cargo.toml  build.rs  this-is-rust
src/: actions.rs  app.rs  bar.rs  barlistener.rs  changer.rs  critical.rs  libcanberra.rs  listeners.rs  main.rs  opener.rs  state.rs  style.css  style.scss
src/actions/: sway.rs
src/listeners/: bus.rs  sound.rs  subprocesses.rs  sway.rs  time.rs  upower.rs
src/listeners/bus/: upower.rs
src/listeners/sway/: input.rs  output.rs  workspace.rs
