[package]
name = "swaynyaad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
futures-lite = { version = "2.3.0", default-features = false }
gtk4-layer-shell = "0.4"
pulse = { version = "2.28.1", package = "libpulse-binding", default-features = false }
pulse_tokio = { version = "0.1.1", package = "libpulse-tokio" }
relm4 = { version = "0.9.0", default-features = false, features = ["macros"] }
rustix = { version = "0.38.34", default-features = false, features = ["system"] }
serde = "1.0.202"
serde_json = "1.0.117"
swayipc-async = { git = "https://github.com/yuki0iq/swayipc-rs", version = "2.0.3" }
tokio = { version = "1.39.3", default-features = false, features = ["fs", "sync", "time"] }
tokio-stream = { version = "0.1.15", default-features = false }
