[package]
name = "swaynyaad"
version = "0.1.0"
edition = "2021"

[dependencies]
alsa = { version = "0.9.1", default-features = false }
anyhow = "1.0.86"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
futures = { version = "0.3.30", default-features = false }
futures-lite = { version = "2.3.0", default-features = false }
gtk4-layer-shell = "0.4"
kira = { version = "0.9.4", default-features = false, features = ["cpal", "ogg"] }
relm4 = { version = "0.9.0", default-features = false, features = ["macros"] }
rustix = { version = "0.38.34", default-features = false, features = ["system"] }
serde = "1.0.202"
serde_json = "1.0.117"
swayipc-async = { git = "https://github.com/yuki0iq/swayipc-rs", version = "2.0.3" }
tokio = { version = "1.39.3", default-features = false, features = ["net", "process", "io-util", "time", "fs", "macros"] }
tokio-stream = { version = "0.1.15", default-features = false }
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings", version = "0.3.2" }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
